Google Image API integrate and image population Problem Wanted to add support for searching google images (in case Pixabay returns results which I don't like). Also needed to display the images on the page once the search has been made. Need to populate a grid of images from the 10 URLs returned from the image function. Solution Created a simple function to retrieve google images urls. Wrote some JS code to populate the images on the page using DOM, however the code is quite lengthly - not sure if it is the best approach. I think I should maybe look into using JQuery for this type of stuff. Note

--- a/web/index.html
+++ b/web/index.html
@@ -78,6 +78,12 @@
     </div>
   </section>
 
+    <section class="images">
+    <div class="container" id="retrieved_images">
+
+    </div> 
+  </section>
+
   <!-- Footer -->
   <footer class="footer bg-light">
     <div class="container">
