--- a/web/index.html
+++ b/web/index.html
@@ -78,6 +78,11 @@
     </div>
   </section>
 
+  <section class="images">
+    <div class="container" id="retrieved_images">
+    </div> 
+  </section>
+
   <!-- Footer -->
   <footer class="footer bg-light">
     <div class="container">
