Image display Needed to pull in images and display them on the page. Needed to use google CSE API. Application is successfully pulling in images for a given search term and displaying in a formatted grid. I am able to pull in images from Google or from Pixabay. Note

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
   <script type='text/javascript' src='/eel.js'></script>
   <script type='text/javascript' src='main.js'></script>
 
-  <link href="css/landing-page.min.css" rel="stylesheet">
+  <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
@@ -78,10 +78,15 @@
     </div>
   </section>
 
-  <section class="images">
-    <div class="container" id="retrieved_images">
-    </div> 
-  </section>
+  <div class="container">
+
+  <hr class="mt-2 mb-5">
+
+  <div class="row text-center text-lg-left">
+
+  </div>
+
+</div>
 
   <!-- Footer -->
   <footer class="footer bg-light">
