--- a/web/index.html
+++ b/web/index.html
@@ -66,7 +66,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="" id="icon"></i>
             </div>
             <h3 id="word_searched"></h3>
             <p class="lead mb-0" id="word_category"></p>
@@ -86,6 +86,12 @@
 
   </div>
 
+</div>
+
+<div class="container">
+  <div class="row">
+    <button type="button" class="btn btn-lg btn-primary" disabled>Add to Anki  <i class="icon-rocket id="icon"></i></button>
+  </div>
 </div>
 
   <!-- Footer -->
