FIX - searches don't clear Problem Previously on successive searches the results didn't clear from the page and if you searched for a word that wasn't in the database it would retrieve the images anyway. Solution Reorder the code and made it more object orientated. There is now a function which clears the image results from the page when you search for a second term. Additionally if you search for a term which is not in the database, nothing is shown. Note

--- a/web/index.html
+++ b/web/index.html
@@ -88,8 +88,9 @@
 
 </div>
 
-<div class="container">
+<div class="container mt-">
   <div class="row">
+    <div></div>
     <button type="button" class="btn btn-lg btn-primary" disabled>Add to Anki  <i class="icon-rocket id="icon"></i></button>
   </div>
 </div>
